[add] 更新日時などをエラー部分に表示するように(表示崩れの防止)

--- a/ac-predictor/predictor/predictor/dom.html
+++ b/ac-predictor/predictor/predictor/dom.html
@@ -1,4 +1,4 @@
-<div id="predictor-alert"></div>
+<div id="predictor-alert"><h5 class='sidemenu-txt'>順位表読み込み中…</h5></div>
 <div id="predictor-data">
     <div class="row">
         <div class="input-group col-xs-offset-1 col-xs-10">
