--- a/src/elements/estimator/dom.html
+++ b/src/elements/estimator/dom.html
@@ -1,13 +1,13 @@
 <div id="estimator-alert"></div>
 <div class="row">
 	<div class="input-group">
-		<span class="input-group-addon" id="estimator-input-desc">目標レーティング</span>
+		<span class="input-group-addon" id="estimator-input-desc"></span>
 		<input type="number" class="form-control" id="estimator-input">
 	</div>
 </div>
 <div class="row">
 	<div class="input-group">
-		<span class="input-group-addon" id="estimator-res-desc">必要パフォーマンス</span>
+		<span class="input-group-addon" id="estimator-res-desc"></span>
 		<input class="form-control" id="estimator-res" disabled="disabled">
 		<span class="input-group-btn">
 			<button class="btn btn-default" id="estimator-toggle">入替</button>
