avoid blocking click event by tooltip elem

--- a/ac-predictor-extension/src/elements/predictor/dom.html
+++ b/ac-predictor-extension/src/elements/predictor/dom.html
@@ -9,7 +9,7 @@
                 }
             </style>
             <span class="predictor-tooltip-icon glyphicon glyphicon-question-sign"></span>
-            <div class="tooltip fade bottom">
+            <div class="tooltip fade bottom" style="pointer-events:none">
                 <div class="tooltip-arrow" style="left: 18%;"></div>
                 <div class="tooltip-inner">Rated内の順位です。複数人同順位の際は人数を加味します(5位が4人居たら6.5位として計算)</div>
             </div>
